--- a/src/app/authentication/authentication.component.css
+++ b/src/app/authentication/authentication.component.css
@@ -1,6 +1,17 @@
+@media screen and (max-width:320px){
+    #form{
+        padding: 0px;
+        text-align: center;
+    }
+
+    #footer{
+        margin-top: 20px;
+    }
+}
+
 h1{
     text-align: center;
-    padding-top: 50px;
+    margin-top: 30px;
 }
 
 p{
@@ -14,12 +25,14 @@ p{
 
 #formBg{
     background-color: rgb(211, 211, 211);
-    border-radius: 5%;
+    border-radius: 3%;
     height: 450px;
+    display: block;
 }
 
 #form{
-    padding-top: 20px;
+    padding-top: 10px;
+    text-align: center;
 }
 
 #footer{
@@ -32,6 +45,7 @@ p{
 
 .form-group{
     margin-top: 35px;
+    padding-right: 0px;
 }
 
 input{
